--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@
 # if the files to be tracked are in subdirectories
 !*/wp-content/plugins/apphosting/*
 !*/wp-content/themes/app-hosting/*
+!*/wp-content/plugins/apphosting/admin/*
 
