ready for store upline everyday good

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@
 # if the files to be tracked are in subdirectories
 !*/wp-content/plugins/apphosting/*
 !*/wp-content/themes/app-hosting/*
+!*/wp-content/plugins/apphosting/logs/index.php
+!*/wp-content/plugins/apphosting/icons/index.php
 !*/wp-content/plugins/apphosting/admin/*
 
